# Dynamic-Data-Masking

./: .gitignore  CMakeLists.txt  README.md  mvnw.cmd  分工与执行计划.md  开发流程1.md  用户角色权限管理表v2.md  项目业务逻辑设计v2.md
backend/: README.md  pom.xml
database/: README.md
database/ddl/: 01_schema.sql
database/procedure/: 01_fn_apply_mask.sql  02_query_students.sql  03_query_student_scores.sql  04_detect_abnormal.sql
database/seed/: 01_seed_roles_permissions.sql  02_seed_users.sql  03_seed_masking_config.sql  04_seed_student_data.sql
database/trigger/: 01_policy_change_log.sql
database/view/: 01_masking_config_view.sql
docs/: README.md
docs/api/: API_CONTRACT.md  STAGE5_STUDENT_QUERY_CONTRACT.md
docs/constitution/: PROJECT_CONSTITUTION.md
docs/data/: DATA_DICTIONARY.md
docs/product/: PRD.md
docs/progress/: PROGRESS.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/api/: auth.ts  request.ts  student.ts
frontend/src/layout/: AppLayout.vue
frontend/src/router/: index.ts  menu.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts  auth.ts
frontend/src/utils/: token.ts
scripts/: start-local-mysql.ps1
tools/mysql-data/: LAPTOP-DR02CTML.err  auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
tools/mysql-data/#innodb_redo/: #ib_redo32_tmp  #ib_redo33_tmp  #ib_redo34_tmp  #ib_redo35_tmp  #ib_redo36_tmp  #ib_redo5
(+156 files in other folders)
